implementing more GRPC in the web-bff
