# order-history/cmd/service/rpc_handlers.go
@@ -6,6 +6,7 @@ import (
 	"google.golang.org/protobuf/types/known/timestamppb"
 
 	"github.com/stackus/ftgogo/order-history/internal/application/queries"
+	"github.com/stackus/ftgogo/order-history/internal/domain"
 	"github.com/stackus/ftgogo/serviceapis/orderapi"
 	"github.com/stackus/ftgogo/serviceapis/orderhistoryapi/pb"
 )
@@ -21,18 +22,18 @@ func newRpcHandlers(app Application) rpcHandlers {
 	return rpcHandlers{app: app}
 }
 
-func (h rpcHandlers) GetConsumerOrderHistory(ctx context.Context, request *orderhistorypb.GetConsumerOrderHistoryRequest) (*orderhistorypb.GetConsumerOrderHistoryResponse, error) {
+func (h rpcHandlers) SearchOrderHistories(ctx context.Context, request *orderhistorypb.SearchOrderHistoriesRequest) (*orderhistorypb.SearchOrderHistoriesResponse, error) {
 	var filters *queries.OrderHistoryFilters
 
 	if request.Filter != nil {
 		filters = &queries.OrderHistoryFilters{
 			Since:    request.Filter.Since.AsTime(),
 			Keywords: request.Filter.Keywords,
-			Status:   orderapi.OrderState(int(request.Filter.Status)),
+			Status:   orderapi.FromOrderStateProto(request.Filter.Status),
 		}
 	}
 
-	results, err := h.app.Queries.GetConsumerOrderHistory.Handle(ctx, queries.GetConsumerOrderHistory{
+	results, err := h.app.Queries.SearchOrderHistories.Handle(ctx, queries.SearchOrderHistories{
 		ConsumerID: request.ConsumerID,
 		Filter:     filters,
 		Next:       request.Next,
@@ -42,34 +43,34 @@ func (h rpcHandlers) GetConsumerOrderHistory(ctx context.Context, request *order
 		return nil, err
 	}
 
-	orders := make([]*orderhistorypb.GetConsumerOrderHistoryResponseOrderHistory, len(results.Orders))
+	orders := make([]*orderhistorypb.OrderHistory, len(results.Orders))
 	for _, order := range results.Orders {
-		orders = append(orders, &orderhistorypb.GetConsumerOrderHistoryResponseOrderHistory{
-			OrderID:        order.OrderID,
-			Status:         order.Status,
-			RestaurantID:   order.RestaurantID,
-			RestaurantName: order.RestaurantName,
-			CreatedAt:      timestamppb.New(order.CreatedAt),
-		})
+		orders = append(orders, h.toOrderHistoryProto(order))
 	}
 
-	return &orderhistorypb.GetConsumerOrderHistoryResponse{
+	return &orderhistorypb.SearchOrderHistoriesResponse{
 		Orders: orders,
 		Next:   results.Next,
 	}, nil
 }
 
 func (h rpcHandlers) GetOrderHistory(ctx context.Context, request *orderhistorypb.GetOrderHistoryRequest) (*orderhistorypb.GetOrderHistoryResponse, error) {
-	result, err := h.app.Queries.GetOrderHistory.Handle(ctx, queries.GetOrderHistory{OrderID: request.OrderID})
+	orderHistory, err := h.app.Queries.GetOrderHistory.Handle(ctx, queries.GetOrderHistory{OrderID: request.OrderID})
 	if err != nil {
 		return nil, err
 	}
 
 	return &orderhistorypb.GetOrderHistoryResponse{
-		OrderID:        result.OrderID,
-		Status:         result.Status,
-		RestaurantID:   result.RestaurantID,
-		RestaurantName: result.RestaurantName,
-		CreatedAt:      timestamppb.New(result.CreatedAt),
+		Order: h.toOrderHistoryProto(orderHistory),
 	}, nil
+}
+
+func (h rpcHandlers) toOrderHistoryProto(orderHistory *domain.OrderHistory) *orderhistorypb.OrderHistory {
+	return &orderhistorypb.OrderHistory{
+		OrderID:        orderHistory.OrderID,
+		Status:         orderapi.ToOrderStateProto(orderHistory.Status),
+		RestaurantID:   orderHistory.RestaurantID,
+		RestaurantName: orderHistory.RestaurantName,
+		CreatedAt:      timestamppb.New(orderHistory.CreatedAt),
+	}
 }
